--- a/4进程皆有父.ipynb
+++ b/4进程皆有父.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "python中进程实力的ppid方法对应着 _getppid(2)_ 。"
+    "python中进程实例的ppid方法对应着 _getppid(2)_ 。"
    ]
   }
  ],
