第六章 进程皆有资源限制

--- a/5进程皆有文件描述符.ipynb
+++ b/5进程皆有文件描述符.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unix哲学指出，在Unix世界中，万物皆为文件。这意味着可以将设置为视为文件，\n",
+    "Unix哲学指出，在Unix世界中，万物皆为文件。这意味着可以将设备视为文件，\n",
     "将套接字视为文件，将文件也视为文件。\n",
     "\n",
     "因为所有一切都被视为文件，所以当 **讨论一般意义上的文件时（包括设备、管道、套接字）时，我将使用“资源”这个词，而在表示传统定义（文件系统中的文件）时，将使用“文件”一词**。"
@@ -47,7 +47,7 @@
    "metadata": {},
    "source": [
     "无论何时在进程中打开一个资源，你都会得到一个文件描述符编号（file\n",
-    "description number）。文件描述符并不会在无法进程之间共享，它只存在与\n",
+    "description number）。文件描述符并不会在无关进程之间共享，它只存在与\n",
     "其所属的进程之中。当进程结束之后，会和其他由进程打开的资源一同被关闭。\n",
     "当衍生出一个进程时，文件描述符共享会有一些特殊的含义，更多内容随后详述。"
    ]
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在python中，进程的open_files()方法返回所有在该进程下打开的常规文件对象。返回的文件对象包括如下属性：\n",
+    "在python中，进程的open_files()方法返回所有在该进程下打开的常规文件对象列表。返回的文件对象包括如下属性：\n",
     "+ path：文件的绝对路径\n",
     "+ fd：文件描述符; 在windows系统上，该值总是-1。\n",
     "\n",
@@ -70,8 +70,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 由于jupyter-notebook进程在运行时会默认打开一系列文件，不利用后续\n",
-    "内容讲解，因此本节中的程序均在pyhton命令行中执行"
+    "> 由于jupyter-notebook进程在运行时会默认打开一系列文件，不利于后续\n",
+    "内容讲解，因此本节中的程序均在python命令行中执行"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "source": [
     "### 5.4 实践领域\n",
     "\n",
-    "文件描述符是使用套接字、管道等惊醒网络编程的核心所在，也是文件操作系统的核心。\n",
+    "文件描述符是使用套接字、管道等进行网络编程的核心所在，也是文件操作系统的核心。\n",
     "\n",
     "因此，每个运行中的进程都在使用文件描述符，它们也是你通过计算机来实\n",
     "现大多数趣事之关键所在。在之后的Spyglass项目中，你会看到更多例子揭示如何\n",
